--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<link rel="stylesheet" type="text/css" href="https://github.com/legoman8304/legoman8304.github.io/blob/master/style.css">
+<head>
+<link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/EndersB/CCFS-Nav-Test/master/main.css">
+</head>
 
 <nav _ngcontent-ewp-c113="" class="navbar navbar-expand-lg header justify-content-center"><div _ngcontent-ewp-c113="" class="navbar-brand d-flex w-25 mr-auto p-0 justify-content-start" style="background: linear-gradient(to right, white 10%, #202020 90%);" tabindex="0" ng-reflect-router-link="/admin"><img _ngcontent-ewp-c113="" src="../../../../assets/images/CCFS%20Flat%20logo.svg" class="d-flex justify-content-start img-logo-ccfs" style="height: 52px; width: 340px;"></div><button _ngcontent-ewp-c113="" type="button" data-toggle="collapse" data-target="#collapsingNavbar3" aria-controls="collapsingNavbar3" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"><span _ngcontent-ewp-c113="" class="navbar-toggler-icon text-white"><img _ngcontent-ewp-c113="" src="../../../../assets/icons/menu.svg" style="height: 30px; width: 20px;"></span></button><div _ngcontent-ewp-c113="" id="collapsingNavbar3" class="navbar-collapse collapse w-100 text-white collapse-drawer"><ul _ngcontent-ewp-c113="" class="navbar-nav w-100 justify-content-center text-white header__nav"><li _ngcontent-ewp-c113="" class="nav-item dropdown"><a _ngcontent-ewp-c113="" data-toggle="dropdown" class="nav-link dropdown-toggle hover-color-gray">Shipping</a><!--bindings={
   "ng-reflect-ng-if": "false"
